crates/ars-collections/tests/ui/tab_key_discriminant_string.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(discriminant)]
#[repr(u8)]
enum BadTab {
    Profile = b'p',
}

fn main() {}
